--- a/css/title.css
+++ b/css/title.css
@@ -23,9 +23,8 @@
     left: 135px;
     gap: 10px;
     color: white;
-    white-space: pre-wrap;
-    display: flex;
-    margin-top: -86px;
+    margin-left: -54px;
+    margin-top: -50px;
 }
 .western-img {
     width: 300px;
@@ -36,8 +35,49 @@
     margin-right: 320px;
     margin-top: -35px;
 }
-.title-consectetur {
-    background: linear-gradient(#22D3EE, #0EA5E9);
-    background-clip: text;
-    color: transparent;
+.title-p {
+    color: white;
+}
+
+    .title-consectetur {
+        background: linear-gradient(#22D3EE, #0EA5E9);
+        background-clip: text;
+        color: transparent;
+    }
+
+.twitter {
+    width: 60px;
+    height: 60px;
+    top: 513px;
+    left: 142px;
+    border-radius: 100px;
+    margin-top: 100px;
+}
+.facebook {
+    width: 60px;
+    height: 60px;
+    top: 512px;
+    left: 234px;
+    border-radius: 100px;
+    margin-left: 100px;
+    margin-top: -61px;
+}
+.linkedin {
+    width: 60px;
+    height: 60px;
+    top: 512px;
+    left: 331px;
+    border-radius: 100px;
+    margin-left: -130px;
+    margin-top:-215px;
+    position: fixed;
+}
+.youtube {
+    width: 60px;
+    height: 60px;
+    top: 512px;
+    left: 423px;
+    border-radius: 100px;
+    margin-left: 300px;
+    margin-top: -63px;
 }
