--- a/css/title.css
+++ b/css/title.css
@@ -1,83 +1,33 @@
-.title-container {
-    height: 56px;
-    top: 197px;
-    left: 135px;
-    width: 445px;
+.container {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 320px 100px 120px;
+    align-items: center;
+}
+
+.title-p {
     color: white;
     font-weight: 700;
     font-size: 48px;
+    margin-bottom: 48px;
 }
 
-.title {
-    color: white;
-    font-weight: 700;
-    font-size: 48px;
-    margin-left: 100px;
-    white-space: nowrap;
-}
-.title-p {
-    position: fixed;
-    width: 789px;
-    height: 164px;
-    top: 301px;
-    left: 135px;
-    gap: 10px;
-    color: white;
-    margin-left: -54px;
-    margin-top: -50px;
-}
-.western-img {
-    width: 300px;
-    height: 300px;
-    top: 197px;
-    left: 982px;
-    float: right;
-    margin-right: 320px;
-    margin-top: -35px;
-}
-.title-p {
-    color: white;
+.title-consectetur {
+    color: deepskyblue;
 }
 
-    .title-consectetur {
-        background: linear-gradient(#22D3EE, #0EA5E9);
-        background-clip: text;
-        color: transparent;
+.title-content {
+    color: white;
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 40px;
+}
+
+.img-container {
+    padding-left: 120px;
+    img {
+
+        padding: 0 16px;
     }
-
-.twitter {
-    width: 60px;
-    height: 60px;
-    top: 513px;
-    left: 142px;
-    border-radius: 100px;
-    margin-top: 100px;
-}
-.facebook {
-    width: 60px;
-    height: 60px;
-    top: 512px;
-    left: 234px;
-    border-radius: 100px;
-    margin-left: 100px;
-    margin-top: -61px;
-}
-.linkedin {
-    width: 60px;
-    height: 60px;
-    top: 512px;
-    left: 331px;
-    border-radius: 100px;
-    margin-left: -130px;
-    margin-top:-215px;
-    position: fixed;
-}
-.youtube {
-    width: 60px;
-    height: 60px;
-    top: 512px;
-    left: 423px;
-    border-radius: 100px;
-    margin-left: 300px;
-    margin-top: -63px;
 }
