--- a/css/title.css
+++ b/css/title.css
@@ -35,120 +35,9 @@
     }
 }
 
-.projects {
-    color: white;
-    font-weight: 700;
-    font-size: 48px;
-    margin-top: 70px;
-    margin-left: 120px;
+.title-section {
+    padding: 115px 0 0 125px;
 }
-
-.project1 {
-   display: flex;
-   width: 1150px;
-    height: 300px;
-    background-color: rgba(30, 41, 59, 0.4);
-    border-radius: 20px;
-    margin-top: 50px;
-    margin-left: 120px;
-}
-
-.lamp-img{
-   padding: 30px 0 0 10px;
-}
-
-.design {
-    width: 224px;
-    height: 35px;
-    padding: 90px 0 0 50px;
-}
-
-.project-p {
-    height: 65px;
-    width: 840px;
-    color: white;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
-    font-family: var(--main-font);
-    padding: 35px 20px 0 0;
-}
-
-.project2 {
-    display: flex;
-    border-radius: 20px;
-    margin-left: -480px;
-    margin-top: 350px;
-    width: 1150px;
-    height: 300px;
-    background-color: rgba(30, 41, 59, 0.4);
-}
-
-.illustration {
-    width: 200px;
-    height: 208px;
-    padding: 55px 0 0 15px;
-}
-
-.next {
-   padding: 80px 0 0 115px;
-}
-
-.project-p2 {
-    width: 900px;
-    height: 125px;
-    color: white;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
-    font-family: var(--main-font);
-    margin-top: 40px;
-}
-
-.project3 {
-    width: 1150px;
-    height: 300px;
-    display: flex;
-    margin-left: -1210px;
-    margin-top: 350px;
-    background-color: rgba(30, 41, 59, 0.4);
-    border-radius: 20px;
-
-
-}
-
-.cup {
-    width: 150px;
-    height: 192px;
-    padding: 55px 0 0 30px;
-
-}
-
-.aweasome {
-    padding: 80px 0 0 165px;
-
-}
-
-.project-p3 {
-    width: 840px;
-    height: 125px;
-    color: white;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
-    font-family: var(--main-font);
-    margin-top: 140px;
-    margin-left: -260px;
-}
-
-.posts {
-    margin-top: 380px;
-    margin-left: -575px;
-    color: white;
-    font-weight: 700;
-    font-size: 48px;
-}
-
 
 
 
