--- a/css/title.css
+++ b/css/title.css
@@ -40,7 +40,18 @@
 }
 
 
+@media screen and (max-width: 768px) {
 
+.container{
+    flex-direction: column-reverse;
+    white-space: nowrap;
+    text-align: center;
+}
+
+    .title-content {
+
+    }
+}
 
 
 
