--- a/css/Posts.css
+++ b/css/Posts.css
@@ -12,6 +12,7 @@
     display: flex;
    margin-right: 90px;
     margin-top: -40px;
+    cursor: pointer;
 }
 
 .all-posts {
@@ -28,7 +29,7 @@
     height: 44px;
     margin-left: 10px;
     margin-top: -4px;
-    cursor: pointer;
+
 }
 
 .material-symbols-outlined {
@@ -39,6 +40,10 @@
 
 .posts {
     display: flex;
+ margin-left: 55px;
+
+
+
 }
 
 .post-first {
@@ -102,5 +107,66 @@
     border-radius: 20px;
     background: #1E293B66;
     margin: 70px 0 0 20px;
+}
+
+.newsletters {
+    padding: 120px 0 0 120px;
+}
+
+.newsletters-p {
+    font-family: var(--main-font);
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    color: rgba(203, 213, 225, 1);
+    padding: 0 0 0 120px;
+}
+
+
+.button-subscribe {
+    white-space: nowrap;
+    display: flex;
+    width: 522px;
+    height: 70px;
+    border-radius: 30px;
+    background: rgba(30, 41, 59, 1);
+    margin-left: 870px;
+    margin-top: -100px;
+}
+
+.email {
+    width: 180px;
+    height: 24px;
+    font-family: var(--main-font);
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    color: rgba(203, 213, 225, 1);
+    padding: 23px 0 0 42px;
+}
+
+.subscribe {
+    width: 164px;
+    height: 46px;
+    border-radius: 30px;
+    background: linear-gradient(#22D3EE,#0EA5E9);
+    margin: 12px 0 0 160px;
+    text-align: center;
+
+
+}
+
+.subscribe-p {
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    color: rgba(30, 41, 59, 1);
+    margin-top: 10px;
+
+
+
+
+
 }
 
