--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,6 @@
 @import url(title.css);
 @import url(project.css);
 @import url(posts.css);
+@import url(posts-examples.css);
+@import url(lorem-ipsum-dolor.css);
+@import url(newsletters.css);
