--- a/css/Posts.css
+++ b/css/Posts.css
@@ -22,6 +22,7 @@
     font-size: 20px;
     line-height: 24px;
     white-space: nowrap;
+    text-decoration: none;
 }
 
 .arrow {
@@ -29,21 +30,17 @@
     height: 44px;
     margin-left: 10px;
     margin-top: -4px;
-
 }
 
 .material-symbols-outlined {
     color: var(--gl-color);
     font-size: 34px !important;
+    text-decoration: none;
 }
-
 
 .posts {
     display: flex;
- margin-left: 55px;
-
-
-
+    margin-left: 55px;
 }
 
 .post-first {
@@ -122,7 +119,6 @@
     padding: 0 0 0 120px;
 }
 
-
 .button-subscribe {
     white-space: nowrap;
     display: flex;
@@ -134,26 +130,13 @@
     margin-top: -100px;
 }
 
-.email {
-    width: 180px;
-    height: 24px;
-    font-family: var(--main-font);
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 23px;
-    color: rgba(203, 213, 225, 1);
-    padding: 23px 0 0 42px;
-}
-
 .subscribe {
     width: 164px;
     height: 46px;
     border-radius: 30px;
     background: linear-gradient(#22D3EE,#0EA5E9);
-    margin: 12px 0 0 160px;
+    margin: 12px 0 0 50px;
     text-align: center;
-
-
 }
 
 .subscribe-p {
@@ -163,10 +146,14 @@
     line-height: 23px;
     color: rgba(30, 41, 59, 1);
     margin-top: 10px;
-
-
-
-
-
 }
+
+.input-text {
+    background: rgba(30, 41, 59, 1);
+    border: none;
+    font-size: 20px;
+   margin-left: 40px;
+    margin-top: 23px;
+}
+
 
